{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 995,
  "lineage": "0ceb32f0-a0a1-157d-b557-efbb58a4957a",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:loadbalancer/app/eltons-myapp-ALB/f22a5f8a3a749290",
            "arn_suffix": "app/eltons-myapp-ALB/f22a5f8a3a749290",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "eltons-myapp-ALB-277097852.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:loadbalancer/app/eltons-myapp-ALB/f22a5f8a3a749290",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "eltons-myapp-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0403e42be66092e0d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032251c33914f793f"
              },
              {
                "subnet_id": "subnet-0a895d3e9c860dabd"
              }
            ],
            "subnets": [
              "subnet-032251c33914f793f",
              "subnet-0a895d3e9c860dabd"
            ],
            "tags": {
              "Name": "eltons-myapp-ALB"
            },
            "tags_all": {
              "Name": "eltons-myapp-ALB"
            },
            "vpc_id": "vpc-065e1af1db9163c63",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.vpc_link",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:listener/app/eltons-myapp-ALB/f22a5f8a3a749290/8d736484d92e1130",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Invalid route",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:listener/app/eltons-myapp-ALB/f22a5f8a3a749290/8d736484d92e1130",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:loadbalancer/app/eltons-myapp-ALB/f22a5f8a3a749290",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.vpc_link",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:internet-gateway/igw-07d79a1a6607cd570",
            "id": "igw-07d79a1a6607cd570",
            "owner_id": "637423264408",
            "tags": {
              "Name": "eltons-myapp-igw"
            },
            "tags_all": {
              "Name": "eltons-myapp-igw"
            },
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.listener_rules",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cart",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:targetgroup/cart-service-tg/70bd799df97234fe",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:listener-rule/app/eltons-myapp-ALB/f22a5f8a3a749290/8d736484d92e1130/e1c43d465b06ae6e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/carts*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:listener-rule/app/eltons-myapp-ALB/f22a5f8a3a749290/8d736484d92e1130/e1c43d465b06ae6e",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:listener/app/eltons-myapp-ALB/f22a5f8a3a749290/8d736484d92e1130",
            "priority": 3,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.vpc_link",
            "module.target_groups.aws_lb_target_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "product",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:targetgroup/product-service-tg/bcf13ee47a3a4d12",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:listener-rule/app/eltons-myapp-ALB/f22a5f8a3a749290/8d736484d92e1130/9d807e3ad0aca8c6",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/products*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:listener-rule/app/eltons-myapp-ALB/f22a5f8a3a749290/8d736484d92e1130/9d807e3ad0aca8c6",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:listener/app/eltons-myapp-ALB/f22a5f8a3a749290/8d736484d92e1130",
            "priority": 2,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.vpc_link",
            "module.target_groups.aws_lb_target_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "user",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:targetgroup/user-service-tg/ea10f28abcf0e69c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:listener-rule/app/eltons-myapp-ALB/f22a5f8a3a749290/8d736484d92e1130/cb0c817a07ee52df",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/users*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:listener-rule/app/eltons-myapp-ALB/f22a5f8a3a749290/8d736484d92e1130/cb0c817a07ee52df",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:listener/app/eltons-myapp-ALB/f22a5f8a3a749290/8d736484d92e1130",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.vpc_link",
            "module.target_groups.aws_lb_target_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058e38008c09789c0",
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:elastic-ip/eipalloc-058e38008c09789c0",
            "domain": "vpc",
            "id": "eipalloc-058e38008c09789c0",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-202-188-4.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.188.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058e38008c09789c0",
            "association_id": "eipassoc-0f567bbde60028308",
            "connectivity_type": "public",
            "id": "nat-028d00779d317b9b8",
            "network_interface_id": "eni-0d8de91e0ca4d1c6d",
            "private_ip": "10.0.1.165",
            "public_ip": "43.202.188.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-098752bc6d6c003ca",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:route-table/rtb-0f2fad44b0ff292fc",
            "id": "rtb-0f2fad44b0ff292fc",
            "owner_id": "637423264408",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-028d00779d317b9b8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eltons-myapp-private-rt"
            },
            "tags_all": {
              "Name": "eltons-myapp-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:route-table/rtb-0e441458169cd65a4",
            "id": "rtb-0e441458169cd65a4",
            "owner_id": "637423264408",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d79a1a6607cd570",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eltons-myapp-public-rt"
            },
            "tags_all": {
              "Name": "eltons-myapp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.this",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bfda24814b06526",
            "route_table_id": "rtb-0f2fad44b0ff292fc",
            "subnet_id": "subnet-0a895d3e9c860dabd"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.route_table.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b94160ddfa51878",
            "route_table_id": "rtb-0f2fad44b0ff292fc",
            "subnet_id": "subnet-032251c33914f793f"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.route_table.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a950589f1cd6f4db",
            "route_table_id": "rtb-0e441458169cd65a4",
            "subnet_id": "subnet-098752bc6d6c003ca"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.this",
            "module.route_table.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032ed2b277e2aef81",
            "route_table_id": "rtb-0e441458169cd65a4",
            "subnet_id": "subnet-0fc46475c791bb782"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.this",
            "module.route_table.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:security-group/sg-0403e42be66092e0d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0403e42be66092e0d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04150c711f0ef1f83"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eltons-myapp-alb-sg",
            "name_prefix": "",
            "owner_id": "637423264408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.vpc_link",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cart",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:security-group/sg-0a6c06d7ee8e2d9d8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6c06d7ee8e2d9d8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0403e42be66092e0d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eltons-myapp-cart-service-sg",
            "name_prefix": "",
            "owner_id": "637423264408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.vpc_link",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:security-group/sg-0b2dc3210cefca111",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2dc3210cefca111",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0403e42be66092e0d"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0403e42be66092e0d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eltons-myapp-ecs-task-sg",
            "name_prefix": "",
            "owner_id": "637423264408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.vpc_link",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "product",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:security-group/sg-043e2eb7e8ab987bf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043e2eb7e8ab987bf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0403e42be66092e0d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eltons-myapp-product-service-sg",
            "name_prefix": "",
            "owner_id": "637423264408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.vpc_link",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:security-group/sg-0c410dff6a21b4521",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c410dff6a21b4521",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eltons-myapp-public-sg",
            "name_prefix": "",
            "owner_id": "637423264408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:security-group/sg-036dcb7928cd260b6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036dcb7928cd260b6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043e2eb7e8ab987bf",
                  "sg-0a6c06d7ee8e2d9d8",
                  "sg-0aa094a4a268499a8"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "eltons-myapp-rds-sg",
            "name_prefix": "",
            "owner_id": "637423264408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.cart",
            "module.sg.aws_security_group.product",
            "module.sg.aws_security_group.user",
            "module.sg.aws_security_group.vpc_link",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:security-group/sg-0aa094a4a268499a8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa094a4a268499a8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0403e42be66092e0d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eltons-myapp-user-service-sg",
            "name_prefix": "",
            "owner_id": "637423264408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.vpc_link",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:security-group/sg-0a7fec1b8f346cacf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7fec1b8f346cacf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b2dc3210cefca111"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eltons-myapp-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "637423264408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.ecs",
            "module.sg.aws_security_group.vpc_link",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:security-group/sg-04150c711f0ef1f83",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04150c711f0ef1f83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eltons-myapp-vpc-link-sg",
            "name_prefix": "",
            "owner_id": "637423264408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.target_groups",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cart",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:targetgroup/cart-service-tg/70bd799df97234fe",
            "arn_suffix": "targetgroup/cart-service-tg/70bd799df97234fe",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health_check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:targetgroup/cart-service-tg/70bd799df97234fe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cart-service-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cart-service-tg"
            },
            "tags_all": {
              "Name": "cart-service-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "product",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:targetgroup/product-service-tg/bcf13ee47a3a4d12",
            "arn_suffix": "targetgroup/product-service-tg/bcf13ee47a3a4d12",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health_check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:targetgroup/product-service-tg/bcf13ee47a3a4d12",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "product-service-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "product-service-tg"
            },
            "tags_all": {
              "Name": "product-service-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "user",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:targetgroup/user-service-tg/ea10f28abcf0e69c",
            "arn_suffix": "targetgroup/user-service-tg/ea10f28abcf0e69c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health_check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423264408:targetgroup/user-service-tg/ea10f28abcf0e69c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "user-service-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "user-service-tg"
            },
            "tags_all": {
              "Name": "user-service-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app-A",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:subnet/subnet-0a895d3e9c860dabd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a895d3e9c860dabd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423264408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eltons-myapp-app-A-subnet"
            },
            "tags_all": {
              "Name": "eltons-myapp-app-A-subnet"
            },
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "app-C",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:subnet/subnet-032251c33914f793f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032251c33914f793f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423264408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eltons-myapp-app-C-subnet"
            },
            "tags_all": {
              "Name": "eltons-myapp-app-C-subnet"
            },
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "db-A",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:subnet/subnet-0dbd40434453eaf74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbd40434453eaf74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423264408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eltons-myapp-db-A-subnet"
            },
            "tags_all": {
              "Name": "eltons-myapp-db-A-subnet"
            },
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "db-C",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:subnet/subnet-0d5efa0fff3cfc38d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5efa0fff3cfc38d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423264408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eltons-myapp-db-C-subnet"
            },
            "tags_all": {
              "Name": "eltons-myapp-db-C-subnet"
            },
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-A",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:subnet/subnet-098752bc6d6c003ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098752bc6d6c003ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423264408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eltons-myapp-pub-A-subnet"
            },
            "tags_all": {
              "Name": "eltons-myapp-pub-A-subnet"
            },
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "pub-C",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:subnet/subnet-0fc46475c791bb782",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc46475c791bb782",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423264408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eltons-myapp-pub-C-subnet"
            },
            "tags_all": {
              "Name": "eltons-myapp-pub-C-subnet"
            },
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:vpc/vpc-065e1af1db9163c63",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013b28dd364569677",
            "default_route_table_id": "rtb-0fcc9dfe8910fe9a1",
            "default_security_group_id": "sg-0c3bd06769bc42ed3",
            "dhcp_options_id": "dopt-06ac06f40af934350",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065e1af1db9163c63",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fcc9dfe8910fe9a1",
            "owner_id": "637423264408",
            "tags": {
              "Name": "eltons-myapp"
            },
            "tags_all": {
              "Name": "eltons-myapp"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:vpc-endpoint/vpce-0dd079a912454923a",
            "dns_entry": [
              {
                "dns_name": "vpce-0dd079a912454923a-zslhq7n2.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0dd079a912454923a-zslhq7n2-ap-northeast-2a.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0dd079a912454923a-zslhq7n2-ap-northeast-2c.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "api.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z03637702ECLA8WHQ57PE"
              },
              {
                "dns_name": "ecr.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z0010893ZEU3X1U122CT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0dd079a912454923a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0162ae81a89fcc331",
              "eni-02bcf824f723dac98"
            ],
            "owner_id": "637423264408",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a7fec1b8f346cacf"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.api",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.24",
                "subnet_id": "subnet-0a895d3e9c860dabd"
              },
              {
                "ipv4": "10.0.12.84",
                "subnet_id": "subnet-032251c33914f793f"
              }
            ],
            "subnet_ids": [
              "subnet-032251c33914f793f",
              "subnet-0a895d3e9c860dabd"
            ],
            "tags": {
              "Name": "ecr-endpoint"
            },
            "tags_all": {
              "Name": "ecr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.ecs",
            "module.sg.aws_security_group.vpc_endpoint",
            "module.sg.aws_security_group.vpc_link",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:vpc-endpoint/vpce-0afd1bf747e025a28",
            "dns_entry": [
              {
                "dns_name": "vpce-0afd1bf747e025a28-67e6xosg.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0afd1bf747e025a28-67e6xosg-ap-northeast-2c.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0afd1bf747e025a28-67e6xosg-ap-northeast-2a.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z00104712YEGP6GA59HVM"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z00104712YEGP6GA59HVM"
              },
              {
                "dns_name": "dkr-ecr.ap-northeast-2.on.aws",
                "hosted_zone_id": "Z036374914ME4LUALBADC"
              },
              {
                "dns_name": "*.dkr-ecr.ap-northeast-2.on.aws",
                "hosted_zone_id": "Z036374914ME4LUALBADC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0afd1bf747e025a28",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-019c519fbaa149b81",
              "eni-0b628524b8c9e3da8"
            ],
            "owner_id": "637423264408",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a7fec1b8f346cacf"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.dkr",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.65",
                "subnet_id": "subnet-0a895d3e9c860dabd"
              },
              {
                "ipv4": "10.0.12.104",
                "subnet_id": "subnet-032251c33914f793f"
              }
            ],
            "subnet_ids": [
              "subnet-032251c33914f793f",
              "subnet-0a895d3e9c860dabd"
            ],
            "tags": {
              "Name": "ecr-dkr-endpoint"
            },
            "tags_all": {
              "Name": "ecr-dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.ecs",
            "module.sg.aws_security_group.vpc_endpoint",
            "module.sg.aws_security_group.vpc_link",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:vpc-endpoint/vpce-0c2c8176df6b383d8",
            "dns_entry": [
              {
                "dns_name": "vpce-0c2c8176df6b383d8-zsv1r9ek.ecs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0c2c8176df6b383d8-zsv1r9ek-ap-northeast-2c.ecs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0c2c8176df6b383d8-zsv1r9ek-ap-northeast-2a.ecs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ecs.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z043081716FC2T68LFWCF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c2c8176df6b383d8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01c46ffe38a779e94",
              "eni-0bd11f6319a4dbd26"
            ],
            "owner_id": "637423264408",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a7fec1b8f346cacf"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecs",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.61",
                "subnet_id": "subnet-0a895d3e9c860dabd"
              },
              {
                "ipv4": "10.0.12.144",
                "subnet_id": "subnet-032251c33914f793f"
              }
            ],
            "subnet_ids": [
              "subnet-032251c33914f793f",
              "subnet-0a895d3e9c860dabd"
            ],
            "tags": {
              "Name": "ecs-endpoint"
            },
            "tags_all": {
              "Name": "ecs-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.ecs",
            "module.sg.aws_security_group.vpc_endpoint",
            "module.sg.aws_security_group.vpc_link",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:vpc-endpoint/vpce-0e07a6fc07408974c",
            "dns_entry": [
              {
                "dns_name": "vpce-0e07a6fc07408974c-pzsm1tzi.ecs-a.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e07a6fc07408974c-pzsm1tzi-ap-northeast-2c.ecs-a.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e07a6fc07408974c-pzsm1tzi-ap-northeast-2a.ecs-a.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ecs-a.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z0373007XOCHCZCBSIBS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e07a6fc07408974c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08e3c268d5b60fcdc",
              "eni-0b4f1995ecf2dbd67"
            ],
            "owner_id": "637423264408",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a7fec1b8f346cacf"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecs-agent",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.90",
                "subnet_id": "subnet-0a895d3e9c860dabd"
              },
              {
                "ipv4": "10.0.12.181",
                "subnet_id": "subnet-032251c33914f793f"
              }
            ],
            "subnet_ids": [
              "subnet-032251c33914f793f",
              "subnet-0a895d3e9c860dabd"
            ],
            "tags": {
              "Name": "ecs-agent-endpoint"
            },
            "tags_all": {
              "Name": "ecs-agent-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.ecs",
            "module.sg.aws_security_group.vpc_endpoint",
            "module.sg.aws_security_group.vpc_link",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:vpc-endpoint/vpce-0f5cfe1fa64097d17",
            "dns_entry": [
              {
                "dns_name": "vpce-0f5cfe1fa64097d17-r12pm6pe.ecs-t.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0f5cfe1fa64097d17-r12pm6pe-ap-northeast-2c.ecs-t.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0f5cfe1fa64097d17-r12pm6pe-ap-northeast-2a.ecs-t.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ecs-t.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z00099333CQINGXW8LMR8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f5cfe1fa64097d17",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-006ead660c102923a",
              "eni-05e02d7c1b5aef07b"
            ],
            "owner_id": "637423264408",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a7fec1b8f346cacf"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecs-telemetry",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.85",
                "subnet_id": "subnet-0a895d3e9c860dabd"
              },
              {
                "ipv4": "10.0.12.110",
                "subnet_id": "subnet-032251c33914f793f"
              }
            ],
            "subnet_ids": [
              "subnet-032251c33914f793f",
              "subnet-0a895d3e9c860dabd"
            ],
            "tags": {
              "Name": "ecs-telemetry-endpoint"
            },
            "tags_all": {
              "Name": "ecs-telemetry-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.sg.aws_security_group.ecs",
            "module.sg.aws_security_group.vpc_endpoint",
            "module.sg.aws_security_group.vpc_link",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423264408:vpc-endpoint/vpce-0ced7324a1e8b6483",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "3.5.184.0/21",
              "52.219.56.0/22"
            ],
            "id": "vpce-0ced7324a1e8b6483",
            "owner_id": "637423264408",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0f2fad44b0ff292fc"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "state": "available",
            "tags": {
              "Name": "s3-endpoint"
            },
            "tags_all": {
              "Name": "s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-065e1af1db9163c63"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.route_table.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}